# settings

./: Cargo.toml  README.md  Settings.desktop  style.css
.github/workflows/: ci.yml
src/: action_row.rs  icon.rs  main.rs
src/wifi/: dbus.rs  mod.rs
