[package]
name = "settings"
version = "0.1.0"
description = "Mobile-optimized Linux desktop settings"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/catacomb"
rust-version = "1.68.0"
license = "GPL-3.0"
edition = "2021"

[dependencies]
zbus = { version = "3.11.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
gtk4 = { version = "0.6.2", features = ["v4_8"] }
byteorder = "1.4.3"
